--- a/client/packages/openblocks-cli/package.json
+++ b/client/packages/openblocks-cli/package.json
@@ -32,7 +32,7 @@
     "openblocks-dev-utils": "workspace:^",
     "react": "^17",
     "react-dom": "^17",
-    "react-json-view": "^1.21.3",
+    "react-json-view": "https://registry.npmjs.org/@microlink/react-json-view/-/react-json-view-1.23.0.tgz",
     "rollup-plugin-external-globals": "^0.7.1",
     "vite": "^3.2.7",
     "vite-plugin-css-injected-by-js": "^2.1.1",
