--- a/client/packages/openblocks/package.json
+++ b/client/packages/openblocks/package.json
@@ -66,7 +66,7 @@
     "react-grid-layout": "^1.3.0",
     "react-helmet": "^6.1.0",
     "react-joyride": "^2.4.0",
-    "react-json-view": "^1.21.3",
+    "react-json-view": "https://registry.npmjs.org/@microlink/react-json-view/-/react-json-view-1.23.0.tgz",
     "react-markdown": "^8.0.0",
     "react-qr-barcode-scanner": "^1.0.6",
     "react-quill": "^2.0.0",
